# goodest-doggo

./: .dockerignore  .env2  .gitignore  Cargo.toml  Makefile  READEME.md  README.md  Rocket.toml  Rocket.toml.docker
deploy/: goodestdoggo.yaml
doggo/: Cargo.toml  Dockerfile  Rocket.toml
doggo-api/: .env  Cargo.toml
doggo-api/handlebar_templates/: login-signup.hbs  pupper.hbs  topten.hbs
doggo-api/src/: contexts.rs  generate.rs  lib.rs  main.rs
doggo-api/templates/: base.html.tera  configure-database.tera  login-signup-bckup.hbs  login-signup.hbs  login-signup.html.tera  pupper.hbs  pupper.html.tera  top-10.hbs  topten.hbs  topten.html.tera  view-data.html.tera
doggo-core/: Cargo.toml
doggo-core/src/: ballot.rs  collection_abstractions.rs  errors.rs  lib.rs
doggo-core/src/commands/: mod.rs  pupper_commands_handler.rs  user_commands_handler.rs
doggo-core/src/dtos/: mod.rs
doggo-core/src/queries/: data_queries.rs  data_query_handler.rs  mod.rs  pupper_queries.rs  pupper_query_handler.rs
doggo-core/src/user/: mod.rs
doggo-core/src/value_objects/: email.rs  errors.rs  mod.rs  password.rs  username.rs
doggo-infra/: Cargo.toml
doggo-infra/src/: command_handlers.rs  errors.rs  lib.rs  query_handlers.rs
doggo-infra/src/handlers/: command_handlers.rs  mod.rs  query_handlers.rs  query_retry_wrapper.rs
doggo-infra/src/repositories/: ballot_repository.rs  data_repository.rs  mod.rs  pupper_repository.rs  user_repository.rs
doggo/src/: main.rs
schema/: doggers.json  doggers.sql  lookup.json  lookup.sql
