[package]
name = "doggo-api"
version = "0.1.0"
authors = ["Dan Kozlowski <koz@planetscale.com>", "Peter Farr <peter@prismaphonic.com>"]
description = "goodest doggo allows you to vote for the goodest dog in the world.  It's up to you to find the goodest doggo and vote with your heart"
keywords = ["dogs", "doggo", "vitess"]
categories = ["database"]
repository = "https://github.com/planetscale/goodest-doggo"
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0.101"
serde_derive = "1.0.101"
doggo-infra = { path = "../doggo-infra" }
doggo-core = { path = "../doggo-core" }
dotenv = "0.14.1"
domain_patterns = "0.2.141"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates"]
