[package]
name = "doggo-core"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.40"
serde_derive = "1.0.101"
domain_derive = "0.2.135"
domain_patterns = "0.2.141"
serde = "1.0.101"
