[package]
name = "doggo-core"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.104"
domain_derive = "0.2.137"
domain_patterns = "0.2.141"
serde = "1.0.104"
snafu = "0.6.2"
regex = "1.3.4"
bcrypt = "0.6.1"
ulid = "0.3.1"
