[package]
name = "doggo"
version = "0.1.0"
authors = ["Dan Kozlowski <koz@planetscale.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
mysql = "*"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["mysql_pool","handlebars_templates"]
