[package]
name = "doggo"
version = "0.1.0"
authors = ["Dan Kozlowski <koz@planetscale.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
mysql = "16.1.0"
serde = "1.0.101"
serde_derive = "1.0.101"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["mysql_pool","handlebars_templates"]
